[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unit_convert_swe_nyu"
version = "2.0.0"
description = "Dat,temperature, distance, mace conversion tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/swe-students-spring2026/3-package-silverback_gorilla"